test/corpus/citations-after-tool-result.txt
==============================
Citations after tool result
==============================

## USER:

What's the current weather?

## SERVER TOOL USE:

Name: web_search
ID: srvtoolu_456

### query

<tool.srvtoolu_456>
current weather
</tool.srvtoolu_456>

## SERVER TOOL RESULT:

ID: srvtoolu_456

<tool.srvtoolu_456>
Weather search results
</tool.srvtoolu_456>

## CITATIONS:

It's currently sunny and 75°F

### https://weather.com

Title: Weather.com
Cited text: Currently sunny with a temperature of 75 degrees Fahrenheit...
Encrypted index: xyz789

---

(source_file
  (user
    (text))
  (server_tool_use
    (name)
    (id)
    (tool_param
      (name)
      (value)))
  (server_tool_result
    (id)
    (content))
  (citations
    (text)
    (citation_entry
      (url)
      (title)
      (cited_text)
      (encrypted_index))))
