test/corpus/citations-multiple.txt
====================
Citations multiple
====================

## USER:

Tell me about Einstein and Newton

## SERVER TOOL USE:

Name: web_search
ID: srvtoolu_789

### query

<tool.srvtoolu_789>
Einstein Newton physics
</tool.srvtoolu_789>

## WEB SEARCH TOOL RESULT:

ID: srvtoolu_789

<tool.srvtoolu_789>
Physics search results
</tool.srvtoolu_789>

## CITATIONS:

Einstein developed the theory of relativity

### https://physics.com/einstein

Title: Einstein Biography
Cited text: Albert Einstein developed the theory of relativity in the early 20th century...
Encrypted index: def456

## ASSISTANT:

while

## CITATIONS:

Newton formulated the laws of motion

### https://physics.com/newton

Title: Newton Biography
Cited text: Isaac Newton formulated the three laws of motion...
Encrypted index: ghi789

## CITATIONS:

### https://physics.com/einstein

Title: Einstein Biography
Cited text: Albert Einstein developed the theory of relativity in the early 20th century...
Encrypted index: def456

### https://physics.com/newton

Title: Newton Biography
Cited text: Isaac Newton formulated the three laws of motion...
Encrypted index: ghi789

---

(source_file
  (user
    (text))
  (server_tool_use
    (name
      (value))
    (id
      (value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag))))
  (web_search_tool_result
    (id
      (value))
    (content
      (tool_start_tag)
      (tool_content)
      (tool_end_tag)))
  (citations
    (text)
    (citation_entry
      (url)
      (title
        (value))
      (cited_text
        (value))
      (encrypted_index
        (value))))
  (assistant
    (text))
  (citations
    (text)
    (citation_entry
      (url)
      (title
        (value))
      (cited_text
        (value))
      (encrypted_index
        (value))))
  (citations
    (citation_entry
      (url)
      (title
        (value))
      (cited_text
        (value))
      (encrypted_index
        (value)))
    (citation_entry
      (url)
      (title
        (value))
      (cited_text
        (value))
      (encrypted_index
        (value)))))
