test/corpus/code-block-nested-headers.txt
==============================
Code block with nested headers
==============================

## USER:

Here's code with fake headers:

```
## ASSISTANT:

This looks like a header but isn't

## TOOL USE:

Same with this
```

Real content continues.

## ASSISTANT:

I see your code.

---

(source_file
  (user
    (user_header)
    (text)
    (code_block)
    (text))
  (assistant
    (assistant_header)
    (text)))
