test/corpus/html-comments.txt
=================
HTML comments
=================

## USER:

Here's some code:

<!-- comment -->
<!-- multi
line

comment -->

```
<!-- comment should be included -->
## ASSISTANT:
This should not be parsed as a section header
## TOOL USE:
Neither should this
```

What do you think?

---

(source_file
  (user
    (user_header)
    (text)
    (html_comment)
    (text)
    (code_block)
    (text)))
