test/corpus/mixed-code-blocks-and-sections.txt
================================
Mixed code blocks and sections
================================

# USER

Here's a code example:

```python
def example():
    # This has # USER in a comment
    print("# ASSISTANT not a real header")
```

Now please analyze it.

# ASSISTANT

I can see your code example.

---

(source_file
  (user
    (user_header)
    (text)
    (inline_code)
    (text))
  (assistant
    (assistant_header)
    (text)))
