test/corpus/safe-shell-commands.txt
===================
Safe shell commands
===================

# SYSTEM

Hello

<safe-shell-commands>
foo
bar
</safe-shell-commands>

world

# USER

test

---

(source_file
  (system
    (system_header)
    (text)
    (safe_shell_commands
      (shell_command)
      (shell_command))
    (text))
  (user
    (user_header)
    (text)))
