test/corpus/server-tool-use-basic.txt
=======================
Server tool use basic
=======================

## USER:

Search for current weather in San Francisco

## SERVER TOOL USE:

Name: web_search
ID: srvtoolu_123

### query

<tool.srvtoolu_123>
current weather San Francisco
</tool.srvtoolu_123>

## WEB SEARCH TOOL RESULT:

ID: srvtoolu_123

<tool.srvtoolu_123>
[
  {
    "title": "Weather in San Francisco",
    "url": "https://weather.com/sf",
    "content": "Sunny, 72°F"
  }
]
</tool.srvtoolu_123>

## ASSISTANT:

The current weather in San Francisco is sunny and 72°F.

---

(source_file
  (user
    (user_header)
    (text))
  (server_tool_use
    (server_tool_use_header)
    (name
      (key)
      (value))
    (id
      (key)
      (value))
    (tool_param
      (tool_param_header
        (name))
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag))))
  (web_search_tool_result
    (web_search_tool_result_header)
    (id
      (key)
      (value))
    (content
      (tool_start_tag)
      (tool_content
        (tool_content_head)
        (tool_content_tail))
      (tool_end_tag)))
  (assistant
    (assistant_header)
    (text)))
