test/corpus/server-tool-use-string-result.txt
==============================
Server tool use string result
==============================

## USER:

What's the weather like?

## SERVER TOOL USE:

Name: web_search
ID: srvtoolu_456

### query

<tool.srvtoolu_456>
weather
</tool.srvtoolu_456>

## SERVER TOOL RESULT:

ID: srvtoolu_456

<tool.srvtoolu_456>
Sunny and warm today
</tool.srvtoolu_456>

## ASSISTANT:

It looks like it's sunny and warm today!

---

(source_file
  (user
    (text))
  (server_tool_use
    (name
      (name_value))
    (id
      (id_value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag))))
  (server_tool_result
    (id
      (id_value))
    (content
      (tool_start_tag)
      (tool_content)
      (tool_end_tag)))
  (assistant
    (text)))
