test/corpus/tool-use-multiple-params.txt
==========================
Tool use multiple params
==========================

## USER:

Search for python files containing 'def main'

## TOOL USE:

Name: ripgrep
ID: toolu_456

### pattern

<tool.toolu_456>
def main
</tool.toolu_456>

### file-type

<tool.toolu_456>
py
</tool.toolu_456>

### context-lines

<tool.toolu_456>
2
</tool.toolu_456>

## TOOL RESULT:

ID: toolu_456

<tool.toolu_456>
src/main.py:10:def main():
src/utils.py:25:def main_helper():
</tool.toolu_456>

## ASSISTANT:

I found 2 matches for 'def main' in Python files.

---

(source_file
  (user
    (user_header)
    (text))
  (tool_use
    (tool_use_header)
    (name
      (value))
    (id
      (value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag)))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag)))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag))))
  (tool_result
    (tool_result_header)
    (id
      (value))
    (content
      (tool_start_tag)
      (tool_content)
      (tool_end_tag)))
  (assistant
    (assistant_header)
    (text)))
