test/corpus/tool-use-only.txt
===============
Tool use only
===============

## USER:

Read a file

## TOOL USE:

Name: read-file
ID: toolu_999

### path

<tool.toolu_999>
test.txt
</tool.toolu_999>

---

(source_file
  (user
    (text))
  (tool_use
    (name
      (value))
    (id
      (value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag)))))
