test/corpus/tool-use-single-param.txt
========================
Tool use single param
========================

## USER:

Read the file hello.txt

## TOOL USE:

Name: read-file
ID: toolu_123

### path

<tool.toolu_123>
hello.txt
</tool.toolu_123>

## TOOL RESULT:

ID: toolu_123

<tool.toolu_123>
Hello, world!
</tool.toolu_123>

## ASSISTANT:

The file contains: Hello, world!

---

(source_file
  (user
    (user_header)
    (text))
  (tool_use
    (tool_use_header)
    (name
      (value))
    (id
      (value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag))))
  (tool_result
    (tool_result_header)
    (id
      (value))
    (content
      (tool_start_tag)
      (tool_content)
      (tool_end_tag)))
  (assistant
    (assistant_header)
    (text)))
