test/corpus/tool-use-with-code-in-params.txt
==============================
Tool use with code in params
==============================

## USER:

Write some Python code

## TOOL USE:

Name: write-file
ID: toolu_999

### filename

<tool.toolu_999>
example.py
</tool.toolu_999>

### content

<tool.toolu_999>
```python
def main():
    # This ## USER: comment should not break parsing
    print("Hello world")

if __name__ == "__main__":
    main()
```
</tool.toolu_999>

## TOOL RESULT:

ID: toolu_999

<tool.toolu_999>
File written successfully
</tool.toolu_999>

## ASSISTANT:

I've written the Python file.

---

(source_file
  (user
    (text))
  (tool_use
    (name
      (name_value))
    (id
      (id_value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag)))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag))))
  (tool_result
    (id
      (id_value))
    (content
      (tool_start_tag)
      (tool_content)
      (tool_end_tag)))
  (assistant
    (text)))
